golang/greetings.yaml
##################################################################################################
# frontend-go services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: frontend-go
  labels:
    app: frontend-go
    service: frontend-go
spec:
  ports:
  - port: 7000
    name: http
  selector:
    app: frontend-go
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-go
  labels:
    app: frontend-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-go
  template:
    metadata:
      labels:
        app: frontend-go
    spec:
      serviceAccountName: frontend-go
      containers:
      - name: frontend-go
        image: frontend-go:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7000
---
##################################################################################################
# message-go services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: message-go
  labels:
    app: message-go
    service: message-go
spec:
  ports:
  - port: 9000
    name: http
  selector:
    app: message-go
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-go
  labels:
    app: message-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-go
  template:
    metadata:
      labels:
        app: message-go
    spec:
      serviceAccountName: message-go
      containers:
      - name: message-go
        image: message-go:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
---
##################################################################################################
# name-go services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: name-go
  labels:
    app: name-go
    service: name-go
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: name-go
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-go
  labels:
    app: name-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: name-go
  template:
    metadata:
      labels:
        app: name-go
    spec:
      serviceAccountName: name-go
      containers:
      - name: name-go
        image: name-go:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
##################################################################################################
# year-go services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: year-go
  labels:
    app: year-go
    service: year-go
spec:
  ports:
  - port: 6001
    name: http
  selector:
    app: year-go
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: year-go
  labels:
    app: year-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: year-go
  template:
    metadata:
      labels:
        app: year-go
    spec:
      serviceAccountName: year-go
      containers:
      - name: year-go
        image: year-go:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6001
---
