golang/otel-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  labels:
    app: otel-collector
    component:  otel-collector
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: otel-collector
      component: otel-collector
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: otel-collector
        component: otel-collector
    spec:
      containers:
        - args:
            - "--config=/conf/otel-collector-config.yaml"
          image: otel/opentelemetry-collector:0.75.0
          imagePullPolicy: IfNotPresent
          name: otel-collector
          ports:
            - name: otlp
              containerPort: 4317
              protocol: TCP
            - name: otlphttp
              containerPort: 4318
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 200m
              memory: 400Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: otel-collector-config-vol
              mountPath: /conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: otel-collector-config
                path: otel-collector-config.yaml
            name: otel-collector-conf
          name: otel-collector-config-vol
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    app: otel-collector
    component: otel-collector
spec:
  type: LoadBalancer
  ports:
  - name: otlp # Default endpoint for OpenTelemetry receiver.
    port: 4317
    targetPort: 4317
    protocol: TCP
  - name: otlphttp # Default endpoint for OpenTelemetry receiver.
    port: 4318
    targetPort: otlphttp
    protocol: TCP
  selector:
    app: otel-collector
    component: otel-collector
