golang/year-only.yaml
##################################################################################################
# year-golang services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: year-golang
  labels:
    app: year-golang
    service: year-golang
spec:
  ports:
  - port: 6001
    name: http
  selector:
    app: year-golang
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: year-golang
  labels:
    app.kubernetes.io/name: year-golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: year-golang
  template:
    metadata:
      labels:
        app: year-golang
    spec:
      serviceAccountName: year-golang
      shareProcessNamespace: true
      terminationGracePeriodSeconds: 0
      # initContainers:
      #   - name: copy-launcher
      #     image: keyval/launcher:v0.1
      #     command:
      #       - cp
      #       - -a
      #       - /kv-launcher/.
      #       - /odigos-launcher/
      #     volumeMounts:
      #       - name: launcherdir
      #         mountPath: /odigos-launcher
      containers:
        - name: year-golang
          image: hnyexample/year-golang
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 6001
---
